samples/_failures_safe/1761181960_07317b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6df9cbd.c: In function ‘main’:
./samples/SAFE/__tmp_e6df9cbd.c:130:13: error: expected expression at end of input
  130 |             read_matrix(&
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_e6df9cbd.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6df9cbd.c:130:13: error: expected declaration or statement at end of input
